--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
-h1{
-    color:blue; font-size: 42px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
 .encabezado{
-    display: flex;
     width: 100%;
+    text-align: center;
     border: 1px solid #000;
-    padding-block: 25px;
-}
-.menu{
-    display: flex;
-    width: 100%;
     padding-block: 25px;
 }
 .footer{
-    display: flex;
+    text-align: center;
     width: 100%;
     border: 1px solid #000;
+    padding-block: 25px;
 }
 .img{
     width: 100%;
     height: 100%;
+}
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
+    text-decoration-color: #303030;
+
 }
