--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@
     border: 1px solid #000;
     padding-block: 25px;
 }
+/* css para body del index en específico */
+.h1{
+    text-align: left; color:#ec6077; font-size: 42px;    
+}
+.h2{
+    text-align: left; color: #517573;
+}
 .img{
     width: 100%;
     height: 100%;
@@ -17,6 +24,4 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
-    text-decoration-color: #303030;
-
 }
