--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body{
     border: 1px solid #000;
     padding-block: 25px;
 }
-.img{
-    width: 100%;
-    height: 100%;
+img{
+    width: 50%;
+    height: 50%;
 }
 h1{
     text-align: center;
