--- a/style.css
+++ b/style.css
@@ -12,16 +12,15 @@
 }
 /* css para body del index en específico */
 .h1{
-    text-align: left; color:#ec6077; font-size: 42px;    
+    text-align: center; color:#ec6077; font-size: 42px;    
 }
 .h2{
     text-align: left; color: #517573;
 }
-.img{
-    width: 100%;
-    height: 100%;
-}
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
+}
+table{
+    width: 100%;
 }
