--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
-    text-decoration-color: #303030;
 }
 .footer{
     text-align: center;
@@ -22,11 +21,15 @@ body{
 h1{
     text-align: center;
     text-decoration: underline;
+    color:#ec6077;
+    font-size: 42px;
 }
 h2{
     text-align: center;
     font-style: oblique;
+    color: #517573;
 }
-h3 {
+h3{
     text-align: center;
+    color: #6c419d;
 }
