--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 .encabezado{
     width: 100%;
     text-align: center;
-    border: 1px solid #000;
+    border: 1px solid #517573;
     padding-block: 25px;
 }
 .footer{
     text-align: center;
     width: 100%;
-    border: 1px solid #000;
+    border: 1px solid #517573;
     padding-block: 25px;
 }
-/* css para body del index en específico */
-.h1{
-    text-align: center; color:#ec6077; font-size: 42px;    
+h1{
+    text-align: center; 
+    color:#ec6077; 
+    font-size: 42px; 
 }
-.h2{
+h2{
     text-align: left; color: #517573;
 }
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
 }
-table{
-    width: 100%;
+.subtitle{
+    text-align: center;
+    color: #6c419d;
 }
