--- a/style.css
+++ b/style.css
@@ -16,15 +16,19 @@ body{
 }
 h1{
     text-align: center;
-    text-decoration: underline;
     color:#ec6077;
     font-size: 42px;
 }
 h2{
-    text-align: center;
+    text-align: left;
     color: #517573;
 }
 .subtitle{
     text-align: center;
     color: #6c419d;
+    font-size: x-large;
+}
+.body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: left;
 }
